# Sereno

./: .gitignore  Cargo.toml  DBGVIEW_GUIDE.md  Dev_Plan.md  FEATURE_GAP.md  LICENSE  REBOOT_PLAN.md  REMAINING.md  SERENO_BUILD_GUIDE.md  archive-log.ps1  bcdedit_out.txt  certs_out.txt  check-status.ps1  check_events.ps1  deny.toml  dev.ps1  fix-driver.ps1  fresh_install.ps1  full_rebuild.ps1  rules_export.json  run-admin.bat  run-admin.ps1  run_tui_test.ps1  test-driver.ps1  test-sereno.ps1  test_results.txt  tp_out.txt  wfp_current.xml
.cargo/: config.toml
sereno-cli/: Cargo.toml
sereno-cli/src/: driver.rs  main.rs  signature.rs
sereno-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
sereno-core/: Cargo.toml
sereno-core/src/: error.rs  lib.rs  types.rs
sereno-core/src/database/: mod.rs  schema.rs
sereno-core/src/rule_engine/: cache.rs  evaluator.rs  mod.rs
sereno-desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
sereno-desktop/src/: App.tsx  index.css
sereno-desktop/src-tauri/: Cargo.toml  build.rs  sereno.manifest  sereno.rc  tauri.conf.json
sereno-desktop/src-tauri/src/: driver.rs  main.rs
sereno-desktop/src-tauri/src/commands/: mod.rs
sereno-desktop/src/components/: ConnectionList.tsx  Header.tsx  Sidebar.tsx
sereno-desktop/src/types/: connection.ts
sereno-driver/: SerenoFilter.sln  SerenoFilter.vcxproj  sereno.inf
sereno-driver/scripts/: build.ps1  enable-test-signing.ps1  install.ps1
sereno-driver/src/: driver.c  driver.h
sereno-service/: Cargo.toml
sereno-service/src/: dns.rs  dns_intercept.rs  driver.rs  main.rs  process.rs  wfp.rs
