[workspace]
resolver = "2"
members = [
    "sereno-core",
    "sereno-cli",
    "sereno-service",
    "sereno-desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sereno/sereno"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows APIs
windows = { version = "0.58" }
windows-service = "0.7"

# DNS Resolution
hickory-resolver = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# GeoIP
maxminddb = "0.24"

# CLI
clap = { version = "4.5", features = ["derive"] }

# IPC
prost = "0.13"
tonic = "0.12"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
ipnetwork = "0.20"
parking_lot = "0.12"

# Testing
mockall = "0.13"
