[package]
name = "sereno-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sereno"
path = "src/main.rs"

[dependencies]
sereno-core = { path = "../sereno-core" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tabled = "0.17"
dirs = "6"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

# Driver communication (Windows)
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
]}
