[package]
name = "sereno-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sereno-service"
path = "src/main.rs"

[dependencies]
sereno-core = { path = "../sereno-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hickory-resolver = { workspace = true }

dirs = "6"
once_cell = "1.20"
colored = "2.1"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Rpc",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Diagnostics_Etw",
]}
